--- a/app/src/main/res/layout/fragment_change_password.xml
+++ b/app/src/main/res/layout/fragment_change_password.xml
@@ -29,22 +29,12 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageView
-                android:id="@+id/imageView13"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/backButtonChangePassword"
-                app:srcCompat="@drawable/confirm_password_image" />
-
         <TextView
                 android:id="@+id/textView24"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
-                android:layout_marginTop="28dp"
+                android:layout_marginTop="24dp"
                 android:layout_marginEnd="32dp"
                 android:fontFamily="@font/poppinssemibold"
                 android:text="Change Password"
@@ -54,13 +44,13 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageView13" />
+                app:layout_constraintTop_toBottomOf="@+id/backButtonChangePassword" />
 
         <TextView
                 android:id="@+id/textView25"
                 android:layout_width="347dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="8dp"
                 android:fontFamily="@font/poppinsregular"
                 android:text="Kindly input your password to proceed. "
                 android:textAlignment="center"
@@ -76,7 +66,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
-                android:layout_marginTop="9dp"
+                android:layout_marginTop="32dp"
                 android:layout_marginEnd="32dp"
                 android:hint="Old Password"
                 android:textColorHint="@color/hint_selector"
