--- a/app/src/main/res/layout/fragment_onboard.xml
+++ b/app/src/main/res/layout/fragment_onboard.xml
@@ -21,14 +21,18 @@
                 app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="15dp"
                 app:layout_constraintBottom_toBottomOf="@+id/onboardviewpager" app:layout_constraintHorizontal_bias="0.0"/>
 
-        <androidx.viewpager.widget.ViewPager android:layout_width="0dp"
-                                             android:layout_height="0dp"
-                                             app:layout_constraintStart_toStartOf="parent"
-                                             app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="32dp"
-                                             app:layout_constraintBottom_toTopOf="@+id/getstartedbutton"
-                                             android:layout_marginTop="8dp"
-                                             app:layout_constraintTop_toBottomOf="@+id/imageView5"
-                                             android:id="@+id/onboardviewpager"></androidx.viewpager.widget.ViewPager>
+        <androidx.viewpager.widget.ViewPager
+                android:id="@+id/onboardviewpager"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="32dp"
+                app:layout_constraintBottom_toTopOf="@+id/getstartedbutton"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/imageView5"
+                app:layout_constraintVertical_bias="0.0"></androidx.viewpager.widget.ViewPager>
 
         <ImageView
                 android:layout_width="wrap_content"
