--- a/app/src/main/res/layout/fragment_password.xml
+++ b/app/src/main/res/layout/fragment_password.xml
@@ -89,6 +89,7 @@
                 android:textColorHint="@color/hint_selector"
                 app:boxStrokeColor="@color/stroke_selector"
                 app:hintTextColor="#694E5157"
+                app:endIconMode="password_toggle"
                 app:startIconDrawable="@drawable/icon_lock"
                 app:startIconTint="@color/iconcolor"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -114,6 +115,7 @@
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="18dp"
                 android:layout_marginEnd="32dp"
+                app:endIconMode="password_toggle"
                 android:hint="Validate your Password"
                 android:textColorHint="@color/hint_selector"
                 app:boxStrokeColor="@color/stroke_selector"
