--- a/app/src/main/res/layout/settings_text_layout.xml
+++ b/app/src/main/res/layout/settings_text_layout.xml
@@ -25,6 +25,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
+            android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="@+id/Name"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/Name"
